Remove lines, add lines

--- a/twitterlytic/templates/twitterlytic/profile.html
+++ b/twitterlytic/templates/twitterlytic/profile.html
@@ -24,7 +24,9 @@
   </p>
 
   <p>
-    <b>Inferred gender:</b> {{ object.gender }}
+    <b>Inferred gender:</b> {{ object.gender }}<br>
+    <b>Follower count:</b> {{ object.show_data.followers_count }}<br>
+    <b>Following count:</b> {{ object.show_data.friends_count }}
   </p>
 
   <h2>Followers</h2>
