Clean up navbar, add GitHub link

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1,6 +1,25 @@
-/* Padding to avoid navbar. */
 body {
+  /* Padding to avoid navbar. */
   padding-top: 5rem;
+
+  /* Margin bottom by footer height */
+  margin-bottom: 60px;
+}
+
+/* Sticky footer styles
+-------------------------------------------------- */
+html {
+  position: relative;
+  min-height: 100%;
+}
+.footer {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  /* Set the fixed height of the footer here */
+  height: 60px;
+  line-height: 60px; /* Vertically center the text there */
+  background-color: #f5f5f5;
 }
 
 
