Store and display ratios in table

--- a/twitterlytic/templates/twitterlytic/profile.html
+++ b/twitterlytic/templates/twitterlytic/profile.html
@@ -61,6 +61,8 @@
         <tr>
           <th>Username</th>
           <th>Name</th>
+          <th>Follower ratio</th>
+          <th>Following ratio</th>
           <th>Inf. gender</th>
           <th># Followers</th>
         </tr>
@@ -69,6 +71,8 @@
         <tr>
           <th>Username</th>
           <th>Name</th>
+          <th>Follower ratio</th>
+          <th>Following ratio</th>
           <th>Inf. gender</th>
           <th># Followers</th>
         </tr>
@@ -83,6 +87,8 @@
         <tr>
           <th>Username</th>
           <th>Name</th>
+          <th>Follower ratio</th>
+          <th>Following ratio</th>
           <th>Inf. gender</th>
           <th># Followers</th>
         </tr>
@@ -91,6 +97,8 @@
         <tr>
           <th>Username</th>
           <th>Name</th>
+          <th>Follower ratio</th>
+          <th>Following ratio</th>
           <th>Inf. gender</th>
           <th># Followers</th>
         </tr>
